small test clarifications